--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@darylserrano/kindle-clippings": "^2.2.5",
     "dotenv": "^16.0.3"
   }
 }
