--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "@notionhq/client": "^2.2.13",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "node-fetch": "^3.3.2"
+    "fs": "^0.0.1-security"
   }
 }
